--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "react-template",
+  "name": "ts-react-music",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.8.0",
     "@reduxjs/toolkit": "^1.9.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -11,6 +12,7 @@
     "@types/node": "^16.18.11",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
+    "antd": "^5.1.2",
     "axios": "^1.2.2",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
